Backend is close to be finished

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,21 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.security.secretKey=p@ss_word_12/kkk&&sißâ*-m@nâgm£n₺dsasdsda
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=applyiz.tech@gmail.com
+spring.mail.password=Grad123123
+spring.mail.propeties.mail.transport.protocol=smtp
+spring.mail.propeties.mail.debug=true
+spring.mail.propeties.mail.smtp.auth=true
+spring.mail.propeties.mail.smtp.starttls.enable=true
+
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
